--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
   "bitcoreNode": "lib",
   "dependencies": {
     "async": "*",
-    "flashcore-lib": "^0.13.22",
-    "flashcore-message": "^1.0.5",
+    "flashcore-lib": "flash-coin/flashcore-lib",
+    "flashcore-message": "flash-coin/flashcore-message",
     "body-parser": "^1.13.3",
     "compression": "^1.6.1",
     "lodash": "^2.4.1",
