--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "lru-cache": "^4.0.1",
     "morgan": "^1.7.0",
     "request": "^2.81.0"
+    "bignumber.js": "8.1.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
