--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "lodash": "~>4.17.5",
     "lru-cache": "^4.0.1",
     "morgan": "^1.7.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
     "bignumber.js": "8.1.1"
   },
   "devDependencies": {
